--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gjtrowbridge/hero-starter",
   "devDependencies": {
     "chai": "^1.9.2",
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "gulp-concat": "*"
   }
 }
