Improved simulator. Added default brains and brains from some leader board players. Added colors.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/gjtrowbridge/hero-starter/issues"
   },
   "homepage": "https://github.com/gjtrowbridge/hero-starter",
+  "dependencies": {
+    "colors": "*"
+  },
   "devDependencies": {
     "chai": "^1.9.2",
     "mocha": "^1.21.4",
